<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/change_log_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/changelog_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/change_log_changes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/changelog_changes" />
	    
	
        <Button
            android:id="@+id/changelog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOk"
            android:text="@string/changelog_ok_button_text" />
	   
	</LinearLayout>
	
</ScrollView>